<resources>
    <string name="app_name"> </string>
    <string name="top_bar_title">TODO LIST</string>
    <string name="add_button_text">ADD</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="default_title">Your title</string>
    <string name="default_date">01.01.2023</string>
    <string name="default_time">12:00</string>
    <string name="default_details">Your description</string>
</resources>