<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.InputType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.MainActivity">

        <View
            android:id="@+id/top_bar"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/transparent"
            android:scaleX="1.6"
            android:scaleY="1.6"
            android:src="?attr/actionModeCloseDrawable"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="@id/top_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.5"
            app:tint="@color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/item_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@android:drawable/btn_star"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.06"
            app:tint="@color/black"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ems="8"
            android:gravity="top|start"
            android:text="@string/default_title"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_title_icon"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            app:layout_constraintVertical_bias="0.045" />

        <ImageButton
            android:id="@+id/item_date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_month"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            app:layout_constraintVertical_bias="0.035"
            app:tint="@color/black"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/default_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_title_icon"
            app:layout_constraintTop_toBottomOf="@id/item_title"
            app:layout_constraintVertical_bias="0.023" />

        <ImageButton
            android:id="@+id/item_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_recent_history"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_date"
            app:layout_constraintVertical_bias="0.059"
            app:tint="@color/black"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/default_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_time_icon"
            app:layout_constraintTop_toBottomOf="@id/item_date"
            app:layout_constraintVertical_bias="0.044" />

        <ImageButton
            android:id="@+id/item_details_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_info_details"
            android:tintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_time"
            app:layout_constraintVertical_bias="0.09"
            app:tint="@color/black"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/item_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ems="12"
            android:gravity="start|top"
            android:text="@string/default_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_details_icon"
            app:layout_constraintTop_toBottomOf="@id/item_time"
            app:layout_constraintVertical_bias="0.074"  />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:text="@string/submit_button_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>